# openapi/generated/brew-note/api/openapi.yaml
@@ -106,12 +106,12 @@ components:
           type: string
     Bean:
       example:
-        roastLevel: roastLevel
         productionArea: productionArea
         kind: kind
-        price: 0.8008281904610115
+        price: 6.027456183070403
         id: id
         beanId: beanId
+        roastId: 0
       properties:
         id:
           type: string
@@ -121,8 +121,8 @@ components:
           type: string
         kind:
           type: string
-        roastLevel:
-          type: string
+        roastId:
+          type: integer
         price:
           format: double
           nullable: true
@@ -133,21 +133,21 @@ components:
       - kind
       - price
       - productionArea
-      - roastLevel
+      - roastId
     CreateBean:
       example:
-        roastLevel: roastLevel
         productionArea: productionArea
         kind: kind
+        roastId: 0
       properties:
         productionArea:
           type: string
         kind:
           type: string
-        roastLevel:
-          type: string
+        roastId:
+          type: integer
       required:
       - kind
       - productionArea
-      - roastLevel
+      - roastId
       type: object
