# openapi/generated/brew-note/model_bean.go
@@ -23,7 +23,7 @@ type Bean struct {
 	BeanId string `json:"beanId"`
 	ProductionArea string `json:"productionArea"`
 	Kind string `json:"kind"`
-	RoastLevel string `json:"roastLevel"`
+	RoastId int32 `json:"roastId"`
 	Price NullableFloat64 `json:"price"`
 }
 
@@ -31,13 +31,13 @@ type Bean struct {
 // This constructor will assign default values to properties that have it defined,
 // and makes sure properties required by API are set, but the set of arguments
 // will change when the set of required properties is changed
-func NewBean(id string, beanId string, productionArea string, kind string, roastLevel string, price NullableFloat64) *Bean {
+func NewBean(id string, beanId string, productionArea string, kind string, roastId int32, price NullableFloat64) *Bean {
 	this := Bean{}
 	this.Id = id
 	this.BeanId = beanId
 	this.ProductionArea = productionArea
 	this.Kind = kind
-	this.RoastLevel = roastLevel
+	this.RoastId = roastId
 	this.Price = price
 	return &this
 }
@@ -146,28 +146,28 @@ func (o *Bean) SetKind(v string) {
 	o.Kind = v
 }
 
-// GetRoastLevel returns the RoastLevel field value
-func (o *Bean) GetRoastLevel() string {
+// GetRoastId returns the RoastId field value
+func (o *Bean) GetRoastId() int32 {
 	if o == nil {
-		var ret string
+		var ret int32
 		return ret
 	}
 
-	return o.RoastLevel
+	return o.RoastId
 }
 
-// GetRoastLevelOk returns a tuple with the RoastLevel field value
+// GetRoastIdOk returns a tuple with the RoastId field value
 // and a boolean to check if the value has been set.
-func (o *Bean) GetRoastLevelOk() (*string, bool) {
+func (o *Bean) GetRoastIdOk() (*int32, bool) {
 	if o == nil {
 		return nil, false
 	}
-	return &o.RoastLevel, true
+	return &o.RoastId, true
 }
 
-// SetRoastLevel sets field value
-func (o *Bean) SetRoastLevel(v string) {
-	o.RoastLevel = v
+// SetRoastId sets field value
+func (o *Bean) SetRoastId(v int32) {
+	o.RoastId = v
 }
 
 // GetPrice returns the Price field value
@@ -210,7 +210,7 @@ func (o Bean) ToMap() (map[string]interface{}, error) {
 	toSerialize["beanId"] = o.BeanId
 	toSerialize["productionArea"] = o.ProductionArea
 	toSerialize["kind"] = o.Kind
-	toSerialize["roastLevel"] = o.RoastLevel
+	toSerialize["roastId"] = o.RoastId
 	toSerialize["price"] = o.Price.Get()
 	return toSerialize, nil
 }
