# src/models/bean.go
@@ -7,12 +7,13 @@ import (
 )
 
 type Bean struct {
-	ID             string         `json:"id"`
+	ID             int            `json:"id" gorm:"AUTO_INCREMENT"`
 	UserId         string         `json:"userId"`
 	ProductionArea string         `json:"productionArea"`
 	Kind           string         `json:"kind"`
-	RoastLevel     string         `json:"roastLevel"`
-	Price   string         `json:"price"`
+	RoastId        int32          `json:"roastId"`
+	Price          int            `json:"price"`
+	Gram           int            `json:"gram"`
 	CreatedAt      *time.Time     `json:"createdAt"`
 	UpdatedAt      *time.Time     `json:"updatedAt"`
 	DeletedAt      gorm.DeletedAt `json:"deletedAt"`
